force-app/main/default/objects/TMS_Ticket__c/TMS_Ticket__c.object-meta.xml
<CustomObject>
    <label>Ticket</label>
    <nameField>
        <displayFormat>TMS-{0000}</displayFormat>
        <label>Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>