force-app/main/default/objects/TMS_Ticket__c/fields/assigned_User__c.field-meta.xml
<CustomField>
    <fullName>assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>assignedUser</relationshipName>
    <type>Lookup</type>
</CustomField>