force-app/main/default/objects/TMS_Ticket__c/fields/ticket_heading__c.field-meta.xml
<CustomField>
    <fullName>ticket_heading__c</fullName>
    <label>ticket heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>