force-app/main/default/objects/TMS_Ticket__c/fields/ticketDetails__c.field-meta.xml
<CustomField>
    <fullName>ticketDetails__c</fullName>
    <label>ticketDetails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>